test/fail/type-parameter-count-varargs-not-enough.grace
type {
  name(first)
}.assert(object {
  method name(first, second, *third) {}
})
